--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -173,6 +173,7 @@
   .portfolio-container {
     flex-direction: column;
     align-items: center;
+    overflow-y: scroll;
   }
 
   .projects-initial {
